# LXMF-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: rust.yml
docs/issues/: GITHUB_ISSUE_LINK_DATA_PACKETS.md  GITHUB_ISSUE_RETICULUM_RS.md  PR35_INCOMPLETE_FIX.md  reticulum-rs-add-packet-flow-debug-logging.md  reticulum-rs-debug-logging-patch.md  reticulum-rs-resource-data-rx-issue.md  reticulum-rs-resource-packet-filtering.md  reticulum-rs-resource-transfer-issue.md
examples/: README.md  receiver.rs  sender.rs  simple_message.rs
src/: constants.rs  error.rs  lib.rs  message.rs
src/message/: error.rs  lx_message.rs  lx_payload.rs  message.rs  mod.rs  payload.rs  stamp.rs
src/peer/: error.rs  mod.rs  peer.rs
src/router/: error.rs  handlers.rs  mod.rs  router.rs
tests/: integration_tests.rs  wire_format_tests.rs
