[package]
name = "lxmf"
version = "0.1.0"
edition = "2021"
authors = ["Philippe Llerena"]
license = "MIT"
description = "A Rust implementation of LXMF (Lightweight Extensible Message Format), fully compatible with the Python reference implementation"
repository = "https://github.com/doubleailes/LXMF-rs"
keywords = ["lxmf", "reticulum", "messaging", "cryptography"]
categories = ["network-programming", "cryptography"]

[dependencies]
# MessagePack serialization
rmp = "0.8"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Error handling
thiserror = "1.0"

# Time handling
time = { version = "0.3", features = ["std"] }

[dev-dependencies]
hex = "0.4"

[lib]
name = "lxmf"
path = "src/lib.rs"

[[example]]
name = "simple_message"
path = "examples/simple_message.rs"
