[package]
name = "LXMF-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["std"] }
indexmap = { version = "2.5", features = ["serde"] }
rmp = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }

[dependencies.reticulum]
git = "https://github.com/doubleailes/Reticulum-rs"
branch = "LXMF"
