[package]
name = "LXMF-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["std"] }
indexmap = { version = "2.5", features = ["serde"] }
rmp-serde = "1.3"
rmp = "0.8"
rmpv = "1.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
log = "0.4"
rand_core = { version = "0.6.4", features = ["getrandom"] }
env_logger = "0.10"
digest = "0.10"
rand_chacha = { version = "0.3", optional = false }
thiserror = "1.0"

[dependencies.reticulum]
git = "https://github.com/doubleailes/Reticulum-rs"
branch = "copilot/fix-link-request-processing"

[[example]]
name = "sender"
path = "examples/sender.rs"

[[example]]
name = "receiver"
path = "examples/receiver.rs"
